--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
   <!-- Google site verification -->
   <meta name="google-site-verification" content="3d8L5tJz0QyLjnWX0Vvmm0EoyIw1RgjbDzAr05oqyAY" />
-
+ 
   <title>Kaleigh McGraw</title>
 </head>
 <body>
-  <h1>Welcome to my GitHub Pages site!</h1>
+  <h1>Welcome to Kaleigh McGraw's GitHub Pages site!</h1>
 </body>
 </html>
 
